--- a/CPP01/ex01/Makefile
+++ b/CPP01/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: aklimchu <aklimchu@student.hive.fi>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/01/06 09:06:17 by aklimchu          #+#    #+#              #
-#    Updated: 2025/01/08 15:15:55 by aklimchu         ###   ########.fr        #
+#    Updated: 2025/01/08 16:58:39 by aklimchu         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,7 +26,7 @@ NAME		= zombiesssss
 
 # Compiler
 C++ 		= c++
-CFLAGS		= -ggdb3 -Wall -Werror -Wextra -std=c++20
+CFLAGS		= -Wall -Werror -Wextra -std=c++20
 RM			= rm -f
 RMDIR		= rm -rf
 
@@ -34,7 +34,7 @@ RMDIR		= rm -rf
 SRC 		=	main.cpp \
 				Zombie.cpp \
 				zombieHorde.cpp
-OBJ 		= $(SRC:%.c=$(OBJ_DIR)/%.o)
+OBJ 		= $(SRC:%.cpp=$(OBJ_DIR)/%.o)
 OBJ_DIR		= obj
 INCLUDE		= -I "./"
 
@@ -45,7 +45,7 @@ all:	$(NAME)
 $(OBJ_DIR):
 	@mkdir -p $(OBJ_DIR)
 
-$(OBJ_DIR)/%.o: %.c | $(OBJ_DIR)
+$(OBJ_DIR)/%.o: %.cpp | $(OBJ_DIR)
 	@mkdir -p $(dir $@)
 	@$(C++) $(CFLAGS) $(INCLUDE) -c $< -o $@
 
