--- a/CPP02/ex00/Makefile
+++ b/CPP02/ex00/Makefile
@@ -1,4 +1,14 @@
-## 42 header
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: aklimchu <aklimchu@student.hive.fi>        +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2025/01/29 08:31:53 by aklimchu          #+#    #+#              #
+#    Updated: 2025/01/29 08:31:56 by aklimchu         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
 #Colors
 DEF_COLOR = \033[0;39m
