incoming file / database handling completed, errors introduced

--- a/CPP09/ex00/Makefile
+++ b/CPP09/ex00/Makefile
@@ -19,7 +19,7 @@ RM			= rm -f
 RMDIR		= rm -rf
 
 # Source / OBJ files / Includes
-SRC 		=	main.cpp BitcoinExchange.cpp
+SRC 		=	BitcoinExchange.cpp main.cpp
 OBJ 		= $(SRC:%.cpp=$(OBJ_DIR)/%.o)
 OBJ_DIR		= obj
 INCLUDE		= -I "./"
